add config and split case

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 web_automation/__pycache__/conftest.cpython-312-pytest-8.3.4.pyc
+web_automation/pages/actions/__pycache__/account_page_actions.cpython-312.pyc
+web_automation/pages/actions/__pycache__/download_page_actions.cpython-312.pyc
+web_automation/pages/actions/__pycache__/homepage_actions.cpython-312.pyc
+web_automation/pages/locators/__pycache__/account_page_locators.cpython-312.pyc
+web_automation/pages/locators/__pycache__/download_page_locators.cpython-312.pyc
+web_automation/pages/locators/__pycache__/homepage_locators.cpython-312.pyc
+web_automation/pages/utils/__pycache__/browser_helper.cpython-312.pyc
+web_automation/pages/utils/__pycache__/logging_config.cpython-312.pyc
+web_automation/tests/__pycache__/__init__.cpython-312.pyc
+web_automation/tests/__pycache__/test_cathay_mobile_qr.cpython-312-pytest-8.3.4.pyc
+web_automation/tests/__pycache__/test_cathay_open_account.cpython-312-pytest-8.3.4.pyc
