--- a/web_automation/pytest.ini
+++ b/web_automation/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
-addopts = --html=report.html --self-contained-html
 testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
